Closed Bug 840833 Opened 13 years ago Closed 13 years ago

Backport sydneyaudio Gonk fixes to sydneyaudio Android

Categories

(Core :: Audio/Video, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla21

People

(Reporter: kinetik, Assigned: kinetik)

References

Details

Attachments

(1 file)

Bug 833724 fixes a number of issues in the Gonk backend. Most of these exist in the Android backend too, so we need to backport the fixes.
Attached patch patch v0Splinter Review
Assignee: nobody → kinetik
Status: NEW → ASSIGNED
Blocks: 783456
Comment on attachment 713243 [details] [diff] [review] patch v0 Since you've been working on the AudioTrack cubeb backend, you're the best person to review this. :-)
Attachment #713243 - Flags: review?(paul)
Comment on attachment 713243 [details] [diff] [review] patch v0 Review of attachment 713243 [details] [diff] [review]: ----------------------------------------------------------------- ::: media/libsydneyaudio/src/sydney_audio_android.c @@ +332,5 @@ > p += r; > wrote += r; > + s->amountWritten += r; > + > + sa_stream_resume(s); I assume you tested this does not underrun with the current state of things? I believe people using mozWriteAudio without checking will know when they underrun by watching logcat.
Attachment #713243 - Flags: review?(paul) → review+
(In reply to Paul Adenot (:padenot) from comment #3) > I assume you tested this does not underrun with the current state of things? For regular media playback, the fill-until-short-write mechanism to prefill the buffer was being defeated by the AudioStream being paused and resumed immediately after being created, so there should not no change in behaviour there. See bug 833724 comment 6.
CCing Chris, just in case landing this causes regressions.
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: