Bug 840833 - Use actual playback position to calculate free buffer space and change start-after-write logic in sydneyaudio Android backend.  r=padenot

--HG--
extra : rebase_source : d7a2ad3a681928a560e540c02cf225f5f0d145fc